# sys2dis

./: Cargo.toml  README.md
src/: config.rs  main.rs
systemd/: sys2dis.service
