[package]
name = "sys2dis"
version = "0.1.0"
edition = "2024"
description = "Show off your system resources on Discord like people would care"
authors = ["kepalakubik"]
license = "MIT"

[[bin]]
name = "sys2dis"
path = "src/main.rs"

[dependencies]
discord-rich-presence = "1.1.0"
sysinfo = "0.39.3"
chrono = "0.4.45"
hostname = "0.4.2"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1